Fixed width to make 2 tiles on med and 1 on small screens

--- a/project2/css/project2.css
+++ b/project2/css/project2.css
@@ -69,6 +69,7 @@ header nav{
         
     }
     .card {
+      width: 98%;
     }
 }
 
@@ -77,5 +78,6 @@ header nav{
 and (max-width: 768px)
 {
     .card {
+      width: 48%;
     }
 }
